--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site settings
 title: Kévin Gossé
 email: gossekevin1@gmail.com
+sub_description: Full-Stack JS Developer
 description: 浩阳的博客 前端爱好者
 # > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
