Change site description

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Kévin Gossé
 email: gossekevin1@gmail.com
 sub_description: Full-Stack JS Developer
-description: 浩阳的博客 前端爱好者
+description: Kévin Gossé's applications blog
 # > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
